<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poster Market Commesso</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="registrazione">Non sei registrato. Clicca qui!!!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="inserisciUSR">Inserisci il tuo username</string>
    <string name="accedi">Accedi</string>
    <string name="registrazioneRegistrazione">Benvenuto!!! Per registrarti riempi tutti i campi.</string>
    <string name="registrazioneNome">Nome</string>
    <string name="registrazioneCognome">Cognome</string>
    <string name="registrazioneEmail">e-mail</string>
    <string name="registrazioneRegistrati">Registrati</string>
    <string name="title_activity_registrazione">Registrazione</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_tab1">Acquisizione QrCode</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="tvProductID">Prodotti:</string>
    <string name="tvCustomer">Cliente:</string>
    <string name="tvName">Nome:</string>
    <string name="tvSurname">Cognome:</string>
    <string name="tvUserN">Username:</string>
    <string name="tvEmail">Email:</string>
    <string name="tvOrderState">Stato Ordine: </string>
    <string name="tvOrders">Ordini:</string>
    <string name="tvMacrocategories">Reparto:</string>
    <string name="Loading">Accesso in corso...</string>
    <string name="tDeleteProduct">Acquisisci</string>
    <string name="tMessageDelete">Si desidera acquisire il prodotto selezionato?</string>
    <string name="tCancelDelete">Annulla</string>
    <string name="tTitleBoxDeleteProduct">Eliminazione prodotto</string>
    <string name="tMessageDeleteProd">Eliminazione </string>
    <string name="Euro">\u20ac</string>
    <string name="tvTotal">Totale:</string>
    <string name="tBtnComplete">Completa Ordine</string>
    <string name="tBtnDelivered">Ordine Ritirato</string>
    <string name="tBtnScanCode">Acquisizione Codice</string>
    <string name="title_activity_product_dectail">ProductDectailActivity</string>
    <string name="tDescription">Descrizione:</string>
    <string name="tPrice">Prezzo:</string>
    <string name="tQuantitative">Quantità:</string>
    <string name="tBlankUserOrPassword">Username o Password vuoti</string>
    <string name="tUserPasswordWrong">Username e pasword errati</string>
    <string name="tBlankField">Uno dei campi necessari alla registrazione è vuoto</string>
    <string name="tPasswordMismatch">Le password non coincidono</string>
    <string name="tRegistration">Re</string>
    <string name="title_activity_zbar">ZbarActivity</string>
    <string name="tScanQrCode">Scansionare i QrCode desiderati</string>
    <string name="tScanSingleQrCode">Scansionare il codice desiderato</string>
    <string name="tFinishScan">Terminare\nacquisizione</string>
    <string name="tWarning">Attenzione</string>
    <string name="tTimeout">Timeout connessione</string>
    <string name="tQrCodeNotValid">QrCode scansionato non valido</string>
    <string name="tOk">Ok</string>
    <string name="tProductNotFound">Prodotto non trovato</string>
    <string name="tContinueScan">Continua con la scansione</string>
    <string name="tScanning">Scanning...</string>
    <string name="tActivateConnection">Attivare la connessione internet</string>
    <string name="tProductList">Lista Prodotti</string>
    <string name="tChangeQuantitativeP">+</string>
    <string name="tChangeQuantitativeM">-</string>
    <string name="tChangeQuantitative">Cambia quantità:</string>
    <string name="tTotalImport">"Importo Totale: "</string>
    <string name="tProductsInOrder">"Prodotti nell'ordine: "</string>
    <string name="tShopApp">ShopApp</string>
    <string name="tOrderSendSuccess">Ordine inviato correttamente</string>
    <string name="tOrderSendWrong">Invio ordine non riuscito</string>
    <string name="tSendingOrger">Invio Ordine...</string>
    <string name="tSendOrder">Invia ordine</string>
    <string name="tPrepareOrder">Preparazione ordine</string>
    <string name="tOrderDelivery">Consegna ordine</string>
    <string name="tUpdateOrderState">Aggiornamento stato ordine</string>
    <string name="title_activity_scanning">ScanningActivity</string>
    <string name="title_activity_pre_scanning">PreScanningActivity</string>
    <string name="title_activity_list_product">ListProductActivity</string>
    <string name="title_activity_scan_product_acitivty">ScanProductAcitivty</string>
    <string name="title_activity_scan_single_product">ScanSingleProduct</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_list_product_for_delivery">ListProductForDeliveryActivity</string>

</resources>