<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tvSummaryTabOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Riepilogo: "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tvNumberProductsLabelTabOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tProductsInOrder"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvNumberProductsTabOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tvTotalCostLabelTabOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tTotalImport"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvTotalCostTabOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#e02f2f"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.24" >

        <ImageView
            android:id="@+id/ivSendOrder"
             android:layout_width="140dp"
            android:layout_height="140dp"
           android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/orderlist" />

		<TextView
		    android:id="@+id/tvTotalCostLabelTabOrder"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/ivSendOrder"
		    android:layout_centerHorizontal="true"
		    android:text="@string/tSendOrder"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textStyle="italic" />

    </RelativeLayout>

</LinearLayout>